# wayland_submitter

./: Cargo.toml
examples/: submit_string.rs
src/: connectors.rs  lib.rs  vk_service.rs  wayland.rs
