[package]
name = "wayland_submitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
memmap2 = "0.5"
wayland-client = { version = "0.29", features = ["use_system_lib"] }
wayland-protocols = { version = "0.29", features = [
    "client",
    "unstable_protocols",
] }
zwp-virtual-keyboard = "0.2"
input_event_codes_hashmap = "0.1"
tempfile = "3.3"
zwp-input-method-service = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
ctrlc = "3.2"
